overrides.css
/* overrides.css — custom style overrides */

/* ADMIN-ONLY TEST CLASS PROVIDED BY TIMBER - Included here as an example
.user-role-store_admin {
    .class-name {
        ---stuff---
    }
}
*/

/* Navigation menu adjustments */

#block-commercenavigationmenu li a {
    font-family: Cabin !important;
    font-weight: 500 !important;
}

li.nav-item {
    padding: 1px 6px 0 6px;
}

.ada-icon.contact {
    margin-left: 0;
    margin-right: 0;
}

#cat-menu-button:hover {
    transform: translateX(0);
}

#cat-menu-button.ada-icon i {
    width: 27px;
}

/* Work in progress with nav fixes
@media (min-width: 990px) and (min-device-width: 990px) {
    .sf-depth-1 {
        width: auto;
    }

    header ul.sf-menu a.sf-depth-1 {
        padding: 15px 30px;
    }

    .navbar .nav-icon-wrapper {
        justify-content: right;
    }

    .region-nav-main {
        justify-content: space-between;
    }
}
*/

/* PRODUCT SEARCH */

/* Book titles */
.timber_data .timber-data-content .timber-data-field-title a {
    line-clamp: 2;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    white-space: normal;
    max-width: 100%;
    padding: 0;
    margin-bottom: 0.5em;
    font-size: 0.8em;
    line-height: 1.2;
}

/* Author names */
.views-field-timber-data .timber-data-content .field--name-product_author {
    font-size: 0.8em !important;
}

/* Pre-order indicator */
.preorder_message {
    margin-top: 0.25em;
}

/* Remove publisher and ISBN from carousel book listings, per Abby's request on 06/16 Tuesday */
.field--label-inline.field--name-product_sku,
.field--label-inline.field--name-product_publisher {
    display: none;
}

/* CALENDAR */

.fc-event {
    font-size: 0.7em;
    line-height: 1.2;
}

.fc-day-grid-event .fc-time {
    font-weight: 400;
}

.fc-day-grid-event .fc-content {
    line-clamp: 2;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    white-space: normal;
    overflow: hidden;
}

p.calendar-event-title {
    margin-bottom: 0.5em;
}

/* FOOTER */

.region-footer {
    align-items: flex-start;
    justify-content: space-between;
}

.timber-footer-address {
    margin-top: 0;
    padding: 0;
}

